[package]
name = "custom-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
s2n-quic = { version = "1.2.0", features = ["provider-tls-s2n"]}
s2n-quic-core = { version = "0.3.0", features = ["testing"]}
clap = { version = "3.0.5", features = ["derive"] }
tokio = { version="1.18.2", features=["full"] }
futures-util = {version="0.3"}
env_logger = { version = "0.9" }
log = { version = "0.4" }
bytesize = { version = "1.1.0" }
bytes = { version = "1.1.0" }
